Small test environment with specific encoding